<?xml version="1.0"?>
<package format="2">
  <name>lidar_fusion</name>
  <version>0.1.0</version>
  <description>The lidar_fusion package</description>

  <maintainer email="jex_xuu@163.com">iceytan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <!-- <build_depend>pcl_conversions</build_depend> -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <!-- <exec_depend>pcl_conversions</exec_depend> -->
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  
  <export></export>
</package>
